--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>SuperNinja</h1>
-    <a href="demo_website/contact.html">Contact me</a>
+    <a href="/demo_website/contact.html">Contact me</a>
     <p>fegwhwgeetgtrbtrh4abenenenn</p>
     <p>fegwhwgeetgtrbtrh4abenenenn</p>
     <p>fegwhwgeetgtrbtrh4abenenenn</p>
